assets/scss/custom.scss
/* Custom SCSS for layout compression */

.home-section {
  padding: 2.5rem 0 !important;
}

.section-heading h1 {
  margin-bottom: 0.5rem !important;
}

#profile {
  padding: 1.5rem 0.5rem !important;
}

.media.stream-item {
  margin-bottom: 1.25rem !important;
}

.pub-list-item .btn-links {
  padding-top: 5px !important;
}

.article-metadata {
  margin-bottom: 0.25rem !important;
}

.media.stream-item .article-title {
  font-size: 1rem !important;

  .wg-grants li {
    margin-bottom: 0.75rem !important;
  }

  .media.stream-item .article-style {
    font-size: 1rem !important;
  }

